--- a/cont.html
+++ b/cont.html
@@ -35,7 +35,7 @@ input[type=submit] {
 </style>
 </head>
 <body>
-<h3>Contact Form</h3>
+<h3>Contact Me</h3>
 <div class="container">
 <form action="/action_page.php">
 <label for="firstname">First Name</label>
