--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ font-size: 20px;
 <body>
 <br>
 <br>
-<img src="a.jpeg" alt="myself" style="float:left;width:300px;height:300px;">
+<img src="/a.jpeg" alt="myself" style="float:left;width:300px;height:300px;">
 <br><br>
 <table>
 <tr>
