--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ tr:nth-child(odd) {
 }
 .button
 {
-  font-family: arial, sans-serif;
+font-family: arial, sans-serif;
 padding: 16px 32px;
-  text-align: center;
+text-align: center;
 margin: 4px 2px;
-  cursor: pointer;
+cursor: pointer;
 font-size: 20px;
 }
 p
@@ -49,10 +49,32 @@ strong
 {
 font-size: 20px;
 }
+ .container{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+}
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 10px 12px; 
+}
+li a:hover {
+  background-color: black;
+}
 
 </style>
 </head>
 <body>
+ <div class="container">
+<ul>
+  <li style="float:right"><a class="active" href="https://www.linkedin.com/in/kanwarpreet-singh-938132202/">Linkedin</a></li>
+ <li style="float:right"><a class="active" href="https://github.com/Kanwarpreets1236">Github</a></li>
+</ul>
+</div>
 <br>
 <br>
 <img src="/a.jpeg" alt="myself" style="float:left;width:300px;height:300px;">
